logs/veliberator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Elixir-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-0.7.10.egg-info'...
Listing './lib/python3.5/site-packages/elixir'...
Compiling './lib/python3.5/site-packages/elixir/entity.py'...
***   File "./lib/python3.5/site-packages/elixir/entity.py", line 309
    print self.entity.table.repr2()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elixir/ext'...
Compiling './lib/python3.5/site-packages/elixir/py23compat.py'...
***   File "./lib/python3.5/site-packages/elixir/py23compat.py", line 14
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elixir/relationships.py'...
***   File "./lib/python3.5/site-packages/elixir/relationships.py", line 1118
    print self.table.repr2()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/access'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/drizzle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/informix'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/maxdb'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/veliberator'...
Compiling './lib/python3.5/site-packages/veliberator/geofinder.py'...
***   File "./lib/python3.5/site-packages/veliberator/geofinder.py", line 103
    key=lambda (k, v): (v, k))
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/veliberator/locale'...
Listing './lib/python3.5/site-packages/veliberator/locale/fr'...
Listing './lib/python3.5/site-packages/veliberator/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/veliberator/scripts'...
Compiling './lib/python3.5/site-packages/veliberator/scripts/command_line.py'...
***   File "./lib/python3.5/site-packages/veliberator/scripts/command_line.py", line 31
    print _('-> Online synchronization...')
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/veliberator/tests'...
Listing './lib/python3.5/site-packages/veliberator/tests/data'...
Listing './lib/python3.5/site-packages/veliberator-0.3.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
